--- a/src/app/components/header-main/header-main.component.html
+++ b/src/app/components/header-main/header-main.component.html
@@ -37,11 +37,11 @@
                 <span><i class="icon icon-help"></i>{{helpText}}</span>
             </a>
         </div>
-        <!-- <div class="links-first" style="display: inline-block;vertical-align: middle;">
+        <div class="links-first" style="display: inline-block;vertical-align: middle;" *ngIf="false">
             <a href="/api/" target="_blank">
                 <img src={{apiSvg}} />
                 <span>&nbsp;&nbsp;API</span>
             </a>
-        </div> -->
+        </div>
     </div>
 </div>
