--- a/src/app/components/attribute-panel/attribute-panel.component.html
+++ b/src/app/components/attribute-panel/attribute-panel.component.html
@@ -1,5 +1,10 @@
 <div class="drawer-menu">
-    <form dForm [layout]="layoutDirection" [labelSize]="'sm'" ngForm #myForm1="ngForm">
+    <form
+      dForm
+      [layout]="layoutDirection"
+      [labelSize]="'sm'"
+      ngForm
+      #myForm1="ngForm">
         <d-form-item>
             <p class="attribute-title">
                 {{ 'attributePanel.title' | translate }}
@@ -8,11 +13,22 @@
             </p>
         </d-form-item>
         <d-form-item>
-            <d-accordion [data]="menu1" class="menu" [autoOpenActiveMenu]="true" [menuItemTemplate]="menutemplate"
-                [accordionType]="'embed'" [innerListTemplate]="innerListTemplate" [loadingTemplate]="loadingTemplate">
+            <d-accordion
+              [data]="menu1"
+              class="menu"
+              [autoOpenActiveMenu]="true"
+              [menuItemTemplate]="menutemplate"
+              [accordionType]="'embed'"
+              [innerListTemplate]="innerListTemplate"
+              [loadingTemplate]="loadingTemplate">
             </d-accordion>
-            <d-accordion [data]="menu2" class="menu" [accordionType]="'embed'" [menuItemTemplate]="menutemplate"
-                [innerListTemplate]="innerListTemplate2" [loadingTemplate]="loadingTemplate">
+            <d-accordion
+              [data]="menu2"
+              class="menu"
+              [accordionType]="'embed'"
+              [menuItemTemplate]="menutemplate"
+              [innerListTemplate]="innerListTemplate2"
+              [loadingTemplate]="loadingTemplate">
             </d-accordion>
         </d-form-item>
         <d-form-item>
@@ -43,12 +59,24 @@
 <ng-template #innerListTemplate let-item="item">
     <div style="margin:20px">
         <d-form-item>
-            <d-form-label><span class="title-label">{{'insertPanels.tip.name'|translate}}</span></d-form-label>
+            <d-form-label>
+                <span class="title-label">
+                    {{'insertPanels.tip.name'|translate}}
+                </span>
+            </d-form-label>
             <d-form-control>
                 <div>
-                    <input dTextInput autocomplete="off" class="content-font" style="height:28px;" [name]="'new-name'"
-                        (keyup)="changedValue=true" (blur)="attributeModel.blur(myForm1.form)" [required]="true"
-                        placeholder="{{'attributePanel.namePlaceholder'|translate}}" [(ngModel)]="newName">
+                    <input
+                      dTextInput
+                      autocomplete="off"
+                      class="content-font"
+                      style="height:28px;"
+                      [name]="'new-name'"
+                      (keyup)="changedValue=true"
+                      (blur)="attributeModel.blur(myForm1.form)"
+                      [required]="true"
+                      placeholder="{{'attributePanel.namePlaceholder'|translate}}"
+                      [(ngModel)]="newName">
                 </div>
             </d-form-control>
         </d-form-item>
@@ -60,25 +88,46 @@
                 </d-form-label>
                 <d-form-control>
                     <ng-container *ngIf="item.type === 'string'">
-                        <input class="content-font" dTextInput autocomplete="off" style="height:32px"
-                            [name]="'option-' + item.label.replaceAll(' ', '_')" placeholder="{{item.desc}}"
-                            [(ngModel)]="item.value" (keyup)="changedValue=true"
-                            (blur)="attributeModel.blur(myForm1.form)" />
+                        <input
+                          class="content-font"
+                          dTextInput
+                          autocomplete="off"
+                          style="height:32px"
+                          [name]="'option-' + item.label.replaceAll(' ', '_')"
+                          placeholder="{{item.desc}}"
+                          [(ngModel)]="item.value"
+                          (keyup)="changedValue=true"
+                          (blur)="attributeModel.blur(myForm1.form)" />
                     </ng-container>
                     <ng-container *ngIf="item.type === 'bool'">
-                        <input class="content-font" type="checkbox" style="height:32px" [(ngModel)]="item.value"
-                            [name]="'option-' + item.label.replaceAll(' ', '_')" (keyup)="changedValue=true"
-                            (blur)="attributeModel.blur(myForm1.form)" placeholder="{{item.desc}}" />
+                        <input
+                          class="content-font"
+                          type="checkbox"
+                          style="height:32px"
+                          [(ngModel)]="item.value"
+                          [name]="'option-' + item.label.replaceAll(' ', '_')"
+                          (keyup)="changedValue=true"
+                          (blur)="attributeModel.blur(myForm1.form)"
+                          placeholder="{{item.desc}}" />
                     </ng-container>
                     <ng-container *ngIf="item.type === 'int' || item.type === 'integer'">
-                        <input class="content-font" dTextInput autocomplete="off" style="height:32px"
-                            [(ngModel)]="item.value" [name]="'option-' + item.label.replaceAll(' ', '_')"
-                            placeholder="{{item.desc}}" (keyup)="changedValue=true"
-                            (blur)="attributeModel.blur(myForm1.form)" />
+                        <input
+                          class="content-font"
+                          dTextInput
+                          autocomplete="off"
+                          style="height:32px"
+                          [(ngModel)]="item.value"
+                          [name]="'option-' + item.label.replaceAll(' ', '_')"
+                          placeholder="{{item.desc}}"
+                          (keyup)="changedValue=true"
+                          (blur)="attributeModel.blur(myForm1.form)" />
                     </ng-container>
                     <ng-container *ngIf="item.type === 'list'">
-                        <select class="form-select" [name]="'option-' + item.label.replaceAll(' ', '_')"
-                            [(ngModel)]="item.selected" (ngModelChange)="attributeModel.blur(myForm1.form)">
+                        <select
+                          class="form-select"
+                          [name]="'option-' + item.label.replaceAll(' ', '_')"
+                          [(ngModel)]="item.selected"
+                          (ngModelChange)="attributeModel.blur(myForm1.form)">
                             <option [ngValue]="op" *ngFor="let op of item.options">{{op.label}}</option>
                         </select>
                         <span style="color:#adb0b8">{{item.desc}}</span>
@@ -90,9 +139,15 @@
         <d-form-item *ngIf="unit" class="form-item">
             <d-form-label><span class="title-label">{{'insertPanels.tip.topType'|translate}}</span></d-form-label>
             <d-form-control>
-                <select id="typeSelect" class="form-select" name="'unittype'" [(ngModel)]="unitType.selected"
-                    (ngModelChange)="unitType.change($event, myForm1.form)">
-                    <option *ngFor="let item of unitType.options" [ngValue]="item">{{item.label}}</option>
+                <select
+                  id="typeSelect"
+                  class="form-select"
+                  name="'unittype'"
+                  [(ngModel)]="unitType.selected"
+                  (ngModelChange)="unitType.change($event, myForm1.form)">
+                    <option *ngFor="let item of unitType.options" [ngValue]="item">
+                        {{item.label}}
+                    </option>
                 </select>
             </d-form-control>
         </d-form-item>
@@ -102,7 +157,11 @@
 <ng-template #innerListTemplate2 let-item="item">
     <div style="margin:20px">
         <d-form-item *ngIf="unit" class="form-item">
-            <d-form-label><span class="title-label">{{'attributePanel.topName'|translate}}</span></d-form-label>
+            <d-form-label>
+                <span class="title-label">
+                    {{'attributePanel.topName'|translate}}
+                </span>
+            </d-form-label>
             <d-form-control>
                 <div class="content-font">
                     {{unit.name}}
@@ -111,7 +170,11 @@
         </d-form-item>
 
         <d-form-item *ngIf="unit" class="form-item">
-            <d-form-label><span class="title-label">{{'insertPanels.tip.version'|translate}}</span></d-form-label>
+            <d-form-label>
+                <span class="title-label">
+                    {{'insertPanels.tip.version'|translate}}
+                </span>
+            </d-form-label>
             <d-form-control>
                 <div class="content-font">
                     {{unit.version}}
@@ -120,7 +183,11 @@
         </d-form-item>
 
         <d-form-item *ngIf="unit && unit.desc" class="form-item">
-            <d-form-label><span class="title-label">{{'insertPanels.tip.description'|translate}}</span></d-form-label>
+            <d-form-label>
+                <span class="title-label">
+                    {{'insertPanels.tip.description'|translate}}
+                </span>
+            </d-form-label>
             <d-form-control>
                 <div class="content-font">
                     {{unit.desc}}
@@ -129,16 +196,25 @@
         </d-form-item>
 
         <d-form-item *ngIf="unit && unit.portDetail" class="form-item">
-            <d-form-label><span class="title-label">{{'insertPanels.tip.portDetail'|translate}}</span></d-form-label>
+            <d-form-label>
+                <span class="title-label">
+                    {{'insertPanels.tip.portDetail'|translate}}
+                </span>
+            </d-form-label>
             <d-form-control>
                 <div class="content-font" style="white-space: break-spaces;">
                     {{unit.portDetail}}
                 </div>
-                <d-data-table [dataSource]="descDataSource" [scrollable]="true" [type]="'striped'"
-                    [tableWidthConfig]="descWidthConfig">
+                <d-data-table
+                  [dataSource]="descDataSource"
+                  [scrollable]="true"
+                  [type]="'striped'"
+                  [tableWidthConfig]="descWidthConfig">
                     <thead dTableHead>
                         <tr dTableRow>
-                            <th dHeadCell *ngFor="let colOption of descTableOptions.columns">{{ colOption.header }}</th>
+                            <th dHeadCell *ngFor="let colOption of descTableOptions.columns">
+                                {{ colOption.header }}
+                            </th>
                         </tr>
                     </thead>
                     <tbody dTableBody>
@@ -155,7 +231,11 @@
         </d-form-item>
 
         <d-form-item *ngIf="unit && unit.constraint" class="form-item">
-            <d-form-label><span class="title-label">{{'insertPanels.tip.constraint'|translate}}</span></d-form-label>
+            <d-form-label>
+                <span class="title-label">
+                    {{'insertPanels.tip.constraint'|translate}}
+                </span>
+            </d-form-label>
             <d-form-control>
                 <div class="content-font">
                     {{unit.constraint}}
@@ -164,7 +244,11 @@
         </d-form-item>
 
         <d-form-item *ngIf="unit" class="form-item">
-            <d-form-label><span class="title-label">{{'attributePanel.arrayGroup'|translate}}</span></d-form-label>
+            <d-form-label>
+                <span class="title-label">
+                    {{'attributePanel.arrayGroup'|translate}}
+                </span>
+            </d-form-label>
             <d-form-control>
                 <div class="content-font">
                     {{unit.group}}
@@ -173,7 +257,10 @@
         </d-form-item>
 
         <d-form-item *ngIf="unit" class="form-item">
-            <d-form-label><span class="title-label">{{'insertPanels.tip.isVirtualmodel'|translate}}</span>
+            <d-form-label>
+                <span class="title-label">
+                    {{'insertPanels.tip.isVirtualmodel'|translate}}
+                </span>
             </d-form-label>
             <d-form-control>
                 <div class="content-font">
