--- a/src/app/components/modal-save-as/modal-save-as.component.html
+++ b/src/app/components/modal-save-as/modal-save-as.component.html
@@ -1,3 +1,8 @@
 <div>
-    Graph: <input type='text' [(ngModel)]="graphName" style="width: 100%;" (change)="onInputChange()">
+    Graph: 
+    <input
+      type='text'
+      [(ngModel)]="graphName"
+      style="width: 100%;"
+      (change)="onInputChange()">
 </div>
