--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -94,7 +94,7 @@
 
     .tool-bar-mid {
         float      : right;
-        margin-left: 100px;
+        margin-right: 50px;
     }
 
     .align-origin {
