--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,3 +1,7 @@
-<div class="graph-svg" #canvas style="position: relative;width:100%" (dragover)="handleNodeShapeDragOver($event)"
+<div
+  class="graph-svg"
+  #canvas
+  style="position: relative;width:100%"
+  (dragover)="handleNodeShapeDragOver($event)"
   (drop)="handleNodeShapeDrop.call(this, $event)">
 </div>
